fix dashboard alignments

--- a/assets/scss/container/_container.scss
+++ b/assets/scss/container/_container.scss
@@ -9,12 +9,14 @@
   margin: 0px 10px 10px 60px;
   padding: 24px;
   border-radius: 5px;
+  height: 100%;
 }
 
 .grid-container-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   width: 100%;
+  height: 100%;
 }
 
 .grid-container-3 {
@@ -29,4 +31,3 @@
   width: 100%;
   height: 100%;
 }
-
